--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
     <nav class="navbar">
         <div class="logo">
             <i class="fa-sharp fa-solid fa-earth-europe" id="world"></i>
-            <a href="index.html" class="logoName"> ThreeDays </a>
+            <a href="index.html" class="logoName"> Wanderlust </a>
         </div>
 
         <ul class="nav-menu">
@@ -62,10 +62,6 @@
             <li class="nav-item">
                 <i class="fa-solid fa-message"></i>
                 <a href="contact.html" class="link">İletişim</a>
-            </li>
-            <li class="nav-item">
-                <i class="fa-solid fa-right-to-bracket"></i>
-                <a href="login.html" class="link">Giriş Yap</a>
             </li>
         </ul>
 
@@ -82,7 +78,7 @@
 </div>
 <div class="giris">
 <div class="orta">
-    <h1 align="center" style="color: white;">HOŞGELDİNİZ</h1><br><br>
+    <h1 style="color: white;">HOŞGELDİNİZ</h1><br><br>
     <div class="metin">
         <p style="color:white ">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -112,7 +108,7 @@
 <!--Footer-->
 
 <footer>
-    <h3>ThreeDays</h3>
+    <h3>Wanderlust</h3>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores reprehenderit incidunt quaerat eaque modi totam quae, aliquam rem recusandae asperiores quisquam in ipsum commodi molestiae accusantium iusto. Numquam, nobis esse.</p>
        <ul class="iletisim-bilgi">
         <li>
@@ -147,7 +143,6 @@
             <li><a href="index.html">Ana Sayfa</a></li>
             <li><a href="">Hakkımızda</a></li>
             <li><a href="contact.html">İletişim</a></li>
-            <li><a href="login.html">Giriş Yap / Kayıt Ol</a></li>
         </ul>
        </div>
     <div class="ftr-bottom">
