--- a/contact.html
+++ b/contact.html
@@ -22,22 +22,24 @@
 <header>
     <nav class="navbar">
         <div class="logo">
-            <i class="fa-sharp fa-solid fa-earth-europe" id="world"></i>
-            <a href="index.html" class="logoName"> Wanderlust </a>
-        </div>
+            <video  id="LogoVideo"autoplay muted  >
+               <source src="img/Wanderlust (1).mp4" type="video/mp4"  >
+            </video>   
+           </div>
+   
 
         <ul class="nav-menu">
             <li class="nav-item">
                 <i class="fa-solid fa-house"></i>
-                <a href="" class="link">Ana Sayfa</a>
+                <a href="index.html" class="link" id="actv">Ana Sayfa</a>
             </li>
             <li class="nav-item">
                 <i class="fa-solid fa-address-card"></i>
-                <a href="" class="link">Hakkımızda</a>
+                <a href="about.html" class="link">Hakkımızda</a>
             </li>
             <li class="nav-item">
                 <i class="fa-solid fa-message"></i>
-                <a href="" class="link" id="actv">İletişim</a>
+                <a href="contact.html" class="link">İletişim</a>
             </li>
         </ul>
 
@@ -49,6 +51,7 @@
     </nav>
 </header>
 <!--Header-->
+
 
 <!--Contact-->
 <section class="contact">
