--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
 <header>
     <nav class="navbar">
         <div class="logo">
-            <i class="fa-sharp fa-solid fa-earth-europe" id="world"></i>
-            <a href="index.html" class="logoName"> Wanderlust </a>
-        </div>
+            <video  id="LogoVideo"autoplay muted  >
+               <source src="img/Wanderlust (1).mp4" type="video/mp4"  >
+            </video>   
+           </div>
+   
 
         <ul class="nav-menu">
             <li class="nav-item">
