--- a/about.html
+++ b/about.html
@@ -42,13 +42,15 @@
 </head>
 
 <body>
-    <!--Header-->
+   <!--Header-->
 <header>
     <nav class="navbar">
         <div class="logo">
-            <i class="fa-sharp fa-solid fa-earth-europe" id="world"></i>
-            <a href="index.html" class="logoName"> Wanderlust </a>
-        </div>
+            <video  id="LogoVideo"autoplay muted >
+               <source src="img/Wanderlust (1).mp4" type="video/mp4"  >
+            </video>   
+           </div>
+   
 
         <ul class="nav-menu">
             <li class="nav-item">
@@ -73,6 +75,7 @@
     </nav>
 </header>
 <!--Header-->
+
 
 <!--Hakkimizda-->
 </div>
