--- a/map.html
+++ b/map.html
@@ -70,36 +70,39 @@
 </head>
 <body>
     <!--Header-->
-    <header>
-        <nav class="navbar">
-            <div class="logo">
-                <i class="fa-sharp fa-solid fa-earth-europe" id="world"></i>
-                <a href="index.html" class="logoName"> Wanderlust </a>
-            </div>
+<header>
+    <nav class="navbar">
+        <div class="logo">
+            <video  id="LogoVideo"autoplay muted  >
+               <source src="img/Wanderlust (1).mp4" type="video/mp4"  >
+            </video>   
+           </div>
+   
 
-            <ul class="nav-menu">
-                <li class="nav-item">
-                    <i class="fa-solid fa-house"></i>
-                    <a href="" class="link" id="actv">Ana Sayfa</a>
-                </li>
-                <li class="nav-item">
-                    <i class="fa-solid fa-address-card"></i>
-                    <a href="" class="link">Hakkımızda</a>
-                </li>
-                <li class="nav-item">
-                    <i class="fa-solid fa-message"></i>
-                    <a href="contact.html" class="link">İletişim</a>
-                </li>
-            </ul>
+        <ul class="nav-menu">
+            <li class="nav-item">
+                <i class="fa-solid fa-house"></i>
+                <a href="index.html" class="link" id="actv">Ana Sayfa</a>
+            </li>
+            <li class="nav-item">
+                <i class="fa-solid fa-address-card"></i>
+                <a href="about.html" class="link">Hakkımızda</a>
+            </li>
+            <li class="nav-item">
+                <i class="fa-solid fa-message"></i>
+                <a href="contact.html" class="link">İletişim</a>
+            </li>
+        </ul>
 
-            <div class="nav">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-        </nav>
-    </header>
+        <div class="nav">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+    </nav>
+</header>
 <!--Header-->
+
 
 <!-- Map -->
     <div class="container">
