--- a/about.html
+++ b/about.html
@@ -111,8 +111,15 @@
 <!--Footer-->
 
 <footer>
-    <h3>Wanderlust</h3>
-    <p>Bu sitede özel kordinat ile alınmış kıta ve ülke tanıtan 2D harita yer almaktadır. Amacımız gezmeyi seven ve gezmeyi düşünen insanların öğrenip ona göre gezmesini ve kültürlerini genişletmesini sağlamak.</p>
+    <div class="logo">
+        <video  id="LogoVideo"autoplay muted  >
+           <source src="img/Wanderlust (1).mp4" type="video/mp4"  >
+        </video>   
+       </div>
+    <p>Bu sitede özel kordinatlarla alınmış kıta ve ülke tanıtan 2D harita yer almaktadır. 
+        <br><br>Amacımız gezmeyi seven, kültürlerini geliştirmeyi düşünen insanların öğrenimini sağlamak.     
+             <p style="color:blueviolet">--ThreeDays</p>
+        </p>
        <ul class="iletisim-bilgi">
         <li>
             <a href="https://www.facebook.com/facebook/?locale=tr_TR">
