--- a/index.html
+++ b/index.html
@@ -99,8 +99,15 @@
 
 <!--Footer-->
 <footer>
-    <h3>Wanderlust</h3>
-    <p>Bu sitede özel kordinat ile alınmış kıta ve ülke tanıtan 2D harita yer almaktadır. Amacımız gezmeyi seven ve gezmeyi düşünen insanların öğrenip ona göre gezmesini ve kültürlerini genişletmesini sağlamak.</p>
+    <div class="logo">
+        <video  id="LogoVideo"autoplay muted  >
+           <source src="img/Wanderlust (1).mp4" type="video/mp4"  >
+        </video>   
+       </div>
+    <p>Bu sitede özel kordinatlarla alınmış kıta ve ülke tanıtan 2D harita yer almaktadır. 
+        <br><br>Amacımız gezmeyi seven, kültürlerini geliştirmeyi düşünen insanların harita bilgisini genişletmek.     
+             <p style="color:blueviolet">--ThreeDays</p>
+        </p>
        <ul class="iletisim-bilgi">
         <li>
             <a href="https://www.facebook.com/facebook/?locale=tr_TR">
@@ -137,7 +144,7 @@
         </ul>
        </div>
     <div class="ftr-bottom">
-        <p>Design By - <a href="" id="name">ThreeDays</a></p>
+        <p>Design By - <a href="">ThreeDays</a></p>
     </div>
 </footer>
 <!--Footer-->
