--- a/map.html
+++ b/map.html
@@ -148,6 +148,36 @@
                     <a href="#">Brezilya</a>
                 </div>
             </div>
+            <div class="item top" style="top: 51%; left: 30%;">
+                <div class="icon"></div>
+                <div class="tooltip">
+                    <a href="#">Kolombiya</a>
+                </div>
+            </div>
+            <div class="item top" style="top: 71%; left: 32.5%;">
+                <div class="icon"></div>
+                <div class="tooltip">
+                    <a href="#">Arjantin</a>
+                </div>
+            </div>
+            <div class="item top" style="top: 61%; left: 33.5%;">
+                <div class="icon"></div>
+                <div class="tooltip">
+                    <a href="#">Bolivya</a>
+                </div>
+            </div>
+            <div class="item top" style="top: 67%; left: 86.5%;">
+                <div class="icon"></div>
+                <div class="tooltip">
+                    <a href="#">Avustralya</a>
+                </div>
+            </div>
+            <div class="item top" style="top: 21%; left: 75.3%;">
+                <div class="icon"></div>
+                <div class="tooltip">
+                    <a href="#">Rusya</a>
+                </div>
+            </div>
     
         <!-- <map name="worldmap" id="Map"> -->
             <!--<area shape="rect" coords="265,1060,932,1212" href="h.html" alt="Büyük Okyanus" >
