--- a/contact.html
+++ b/contact.html
@@ -113,9 +113,10 @@
            <source src="img/Wanderlust (1).mp4" type="video/mp4"  >
         </video>   
        </div>
-    <p>Bu sitede özel kordinatlarla alınmış kıta ve ülke tanıtan 2D harita yer almaktadır. 
-        <br><br>Amacımız gezmeyi seven, kültürlerini geliştirmeyi düşünen insanların harita bilgisini genişletmek.     
-             <p style="color:blueviolet">--ThreeDays</p>
+        <p>
+        Bu sitede özel kordinatlarla alınmış kıta ve ülke tanıtan 2D harita yer almaktadır. 
+        <br>
+        Amacımız gezmeyi seven, kültürlerini geliştirmeyi düşünen insanların harita bilgisini genişletmek.
         </p>
        <ul class="iletisim-bilgi">
         <li>
@@ -153,7 +154,7 @@
         </ul>
        </div>
     <div class="ftr-bottom">
-        <p>Design By - <a href="">ThreeDays</a></p>
+        <p>Design By - <a href="" id="name">ThreeDays</a></p>
     </div>
 </footer>
 <!--Footer-->
