--- a/map.html
+++ b/map.html
@@ -123,7 +123,7 @@
                 </div>
             </div>
     
-            <div class="item top" style="top: 24%; left: 22.4%;">
+            <div class="item top" style="top: 24.5%; left: 22.4%;">
                 <div class="icon"></div>
                 <div class="tooltip">
                     <a href="#">Kanada</a>
@@ -246,8 +246,7 @@
         </video>   
        </div>
     <p>Bu sitede özel kordinatlarla alınmış kıta ve ülke tanıtan 2D harita yer almaktadır. 
-        <br><br>Amacımız gezmeyi seven, kültürlerini geliştirmeyi düşünen insanların harita bilgisini genişletmek.     
-             <p style="color:blueviolet">--ThreeDays</p>
+        <br>Amacımız gezmeyi seven, kültürlerini geliştirmeyi düşünen insanların harita bilgisini genişletmek.
         </p>
        <ul class="iletisim-bilgi">
         <li>
@@ -285,7 +284,7 @@
         </ul>
        </div>
     <div class="ftr-bottom">
-        <p>Design By - <a href="">ThreeDays</a></p>
+        <p>Design By - <a href="" id="name">ThreeDays</a></p>
     </div>
 </footer>
 <!--Footer-->
@@ -294,10 +293,6 @@
 <script>
     magnifyglass("worldmag",3);
 </script>
-
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
-<script src="ThreeDays/jquery.rwdImageMaps.js"></script>
 
 <script src="script.js"></script>
 
