--- a/about.html
+++ b/about.html
@@ -116,9 +116,10 @@
            <source src="img/Wanderlust (1).mp4" type="video/mp4"  >
         </video>   
        </div>
-    <p>Bu sitede özel kordinatlarla alınmış kıta ve ülke tanıtan 2D harita yer almaktadır. 
-        <br><br>Amacımız gezmeyi seven, kültürlerini geliştirmeyi düşünen insanların öğrenimini sağlamak.     
-             <p style="color:blueviolet">--ThreeDays</p>
+        <p>
+        Bu sitede özel kordinatlarla alınmış kıta ve ülke tanıtan 2D harita yer almaktadır. 
+        <br>
+        Amacımız gezmeyi seven, kültürlerini geliştirmeyi düşünen insanların öğrenimini sağlamak.
         </p>
        <ul class="iletisim-bilgi">
         <li>
@@ -156,7 +157,7 @@
         </ul>
        </div>
     <div class="ftr-bottom">
-        <p>Design By - <a href="">ThreeDays</a></p>
+        <p>Design By - <a href="" id="name">ThreeDays</a></p>
     </div>
 </footer>
 
