--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 <header>
     <nav class="navbar">
         <div class="logo">
-            <video  id="LogoVideo"autoplay muted  >
-               <source src="img/Wanderlust (1).mp4" type="video/mp4"  >
+            <video  id="LogoVideo"autoplay muted>
+               <source src="img/Wanderlust (1).mp4" type="video/mp4">
             </video>   
-           </div>
+        </div>
    
 
         <ul class="nav-menu">
@@ -100,13 +100,13 @@
 <!--Footer-->
 <footer>
     <div class="logo">
-        <video  id="LogoVideo"autoplay muted  >
-           <source src="img/Wanderlust (1).mp4" type="video/mp4"  >
+        <video  id="LogoVideo"autoplay muted>
+           <source src="img/Wanderlust (1).mp4" type="video/mp4">
         </video>   
        </div>
     <p>Bu sitede özel kordinatlarla alınmış kıta ve ülke tanıtan 2D harita yer almaktadır. 
-        <br><br>Amacımız gezmeyi seven, kültürlerini geliştirmeyi düşünen insanların harita bilgisini genişletmek.     
-             <p style="color:blueviolet">--ThreeDays</p>
+        <br>Amacımız gezmeyi seven, kültürlerini geliştirmeyi düşünen insanların harita bilgisini genişletmek.     
+
         </p>
        <ul class="iletisim-bilgi">
         <li>
@@ -144,7 +144,7 @@
         </ul>
        </div>
     <div class="ftr-bottom">
-        <p>Design By - <a href="">ThreeDays</a></p>
+        <p>Design By - <a href="" id="name">ThreeDays</a></p>
     </div>
 </footer>
 <!--Footer-->
