dinamik sayfa oluşturuldu

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>İletişim | Wanderlust</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/favicon2.png" type="image/x-icon">
 
     <!-- Font Awesome CDN link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -31,7 +32,7 @@
         <ul class="nav-menu">
             <li class="nav-item">
                 <i class="fa-solid fa-house"></i>
-                <a href="index.html" class="link" id="actv">Ana Sayfa</a>
+                <a href="index.html" class="link">Ana Sayfa</a>
             </li>
             <li class="nav-item">
                 <i class="fa-solid fa-address-card"></i>
@@ -39,7 +40,7 @@
             </li>
             <li class="nav-item">
                 <i class="fa-solid fa-message"></i>
-                <a href="contact.html" class="link">İletişim</a>
+                <a href="contact.html" class="link"  id="actv">İletişim</a>
             </li>
         </ul>
 
