--- a/map.html
+++ b/map.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map | Wanderlust</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mapRespons.css">
+    <link rel="shortcut icon" href="img/favicon2.png" type="image/x-icon">
 
     <!-- Font Awesome CDN link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -108,13 +108,6 @@
     <div class="container">
         <div class="img-container">
             <img src="img/aa.jpg" alt="Worldmap" class="worldMap" >
-
-            <div class="item top" style="top: 19%; left: 11.5%;">
-                <div class="icon"></div>
-                <div class="tooltip">
-                    <a href="index.html">Alaska</a>
-                </div>
-            </div>
     
             <div class="item top" style="top: 13%; left: 39%;">
                 <div class="icon"></div>
@@ -172,10 +165,39 @@
                     <a href="#">Avustralya</a>
                 </div>
             </div>
+
+            <div class="item top" style="top: 31.5%; left: 59%;">
+                <div class="icon"></div>
+                <div class="tooltip">
+                    <a href="ulke.html?id=1">Türkiye</a>
+                </div>
+            </div>
+
             <div class="item top" style="top: 21%; left: 75.3%;">
                 <div class="icon"></div>
                 <div class="tooltip">
                     <a href="#">Rusya</a>
+                </div>
+            </div>
+
+            <div class="item top" style="top:33.5%; left: 74.5%;">
+                <div class="icon"></div>
+                <div class="tooltip">
+                    <a href="#">Çin</a>
+                </div>
+            </div>
+
+            <div class="item top" style="top: 34%; left: 85%;">
+                <div class="icon"></div>
+                <div class="tooltip">
+                    <a href="#">Güney Kore</a>
+                </div>
+            </div>
+
+            <div class="item top" style="top: 45%; left: 78%;">
+                <div class="icon"></div>
+                <div class="tooltip">
+                    <a href="#">Tayland</a>
                 </div>
             </div>
     
