--- a/about.html
+++ b/about.html
@@ -19,6 +19,16 @@
      <!--Background Fonts-->
 
     <style>
+        .giris{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    width: 100%;
+    background: url(img/İskenderiyeFeneri.jpg) no-repeat;
+    background-position: center;
+    background-size: cover;
+}
 .orta{
     padding: 10px;
     margin: 10px;
