--- a/map.html
+++ b/map.html
@@ -51,7 +51,7 @@
 <!-- Map -->
     <div class="container">
         <div class="img-container">
-            <img src="img/aa.jpg" alt="Worldmap" class="worldMap" >
+            <img src="img/aa.jpg" alt="Worldmap" class="worldMap">
     
             <div class="item top" style="top: 13%; left: 39%;">
                 <a href="#">
@@ -246,7 +246,7 @@
                 <a href="#">
                     <div class="icon"></div>
                     <div class="tooltip">
-                        <a href="#">Güney Afrika</a>
+                        <a href="#">Güney.Afrika</a>
                     </div>  
                 </a>
             </div>
@@ -310,15 +310,6 @@
                     <div class="icon"></div>
                     <div div class="tooltip">
                         <a href="#">Mısır</a>
-                    </div>
-                </a>
-            </div>
-
-            <div class="item top" style="top: 40%; left:47%;">
-                <a href="#">
-                    <div class="icon"></div>
-                    <div class="tooltip">
-                        <a href="#">Batı Sahra</a>
                     </div>
                 </a>
             </div>
