--- a/ulke.html
+++ b/ulke.html
@@ -49,7 +49,9 @@
 <!-- Main -->
 <section class="mainContainer">
     <div class="ulke">
-        <h1 id="title">  </h1>
+        <a href="map.html">
+            <h1 id="title">  </h1>
+        </a>
 
         <div class="ulke-bilgi1">
             <img id="imgs" src="">
