randomly changing background video okey

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hakkımızda | ThreeDays</title>
 
-    <link rel="shortcut icon" href="img/favicon2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favİcon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 
      <!-- Font Awesome CDN link -->
