--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wanderlust</title>
-    <link rel="shortcut icon" href="img/favicon2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favİcon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 
     <!-- Font Awesome CDN link -->
@@ -58,9 +58,9 @@
 
 <!--Article-->
 <div class="World">
-    <video  autoplay muted loop >
-        <source src="img/pyramid.mp4" type="video/mp4">
-    </video>
+        <video autoplay muted loop  id="background-video">
+            <source src="img/pyramid.mp4" type="video/mp4">
+        </video>
 
     <div class="content">
         <h1>World Map</h1>
