--- a/map.html
+++ b/map.html
@@ -91,7 +91,7 @@
             
             <!-- ABD -->
             <div class="item top" style="top: 34.5%; left: 24.2%;">
-                <a href="#">
+                <a href="ulke.html?id=2">
                     <div class="icon"></div>
                 </a>
             </div>
