--- a/map.html
+++ b/map.html
@@ -55,7 +55,7 @@
 
             <!-- Grönland -->
             <div class="item top" style="top: 12.5%; left: 39.1%;">
-                <a href="#">
+                <a href="ulke.html?id=13">
                     <div class="icon"></div>
                 </a>
             </div>
@@ -105,7 +105,7 @@
 
             <!-- Brezilya -->
             <div class="item top" style="top: 58%; left: 38%;">
-                <a href="#">
+                <a href="ulke.html?id=8">
                     <div class="icon"></div>
                 </a>
             </div>
@@ -126,21 +126,21 @@
 
             <!-- Arjantin -->
             <div class="item top" style="top: 71%; left: 34%;">
-                <a href="#">
+                <a href="ulke.html?id=4">
                     <div class="icon"></div>
                 </a>
             </div>
 
             <!-- Bolivya -->
             <div class="item top" style="top: 61%; left: 33.9%;" id="kaybol">
-                <a href="">
+                <a href="ulke.html?id=7">
                     <div class="icon"></div>
                 </a>
             </div>
 
             <!-- Avustralya -->
             <div class="item top" style="top: 66%; left: 86.5%;">
-                <a href="#">
+                <a href="ulke.html?id=5">
                     <div class="icon"></div>
                 </a>
             </div>
@@ -168,7 +168,7 @@
 
             <!-- Çin -->
             <div class="item top" style="top:31%; left: 76.1%;">
-                <a href="#">
+                <a href="ulke.html?id=9">
                     <div class="icon"></div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
 
             <!-- Güney Kore -->
             <div class="item top" style="top: 34%; left:84.5%;">
-                <a href="#">
+                <a href="ulke.html?id=14">
                     <div class="icon"></div>
                 </a>
             </div>
@@ -259,7 +259,7 @@
 
             <!-- Fas -->
             <div class="item top" style="top: 34%; left:50.7%;" id="kaybol">
-                <a href="#">
+                <a href="ulke.html?id=10">
                     <div class="icon"></div>
                 </a>
             </div>
@@ -308,28 +308,28 @@
 
             <!-- Fransa -->
             <div class="item top" style="top: 26.4%; left:51.1%;" id="kaybol">
-                <a href="#">
+                <a href="ulke.html?id=12">
                     <div class="icon"></div>
                 </a>
             </div>
 
             <!-- Almanya -->
             <div class="item top" style="top: 23.3%; left:53.5%;" id="kaybol">
-                <a href="#">
+                <a href="ulke.html?id=3">
                     <div class="icon"></div>
                 </a>
             </div>
             
             <!-- Belarus -->
             <div class="item top" style="top: 21.5%; left:61%;" id="kaybol">
-                <a href="#">
+                <a href="ulke.html?id=6">
                     <div class="icon"></div>
                 </a>
             </div>
 
             <!-- Finlandiya -->
             <div class="item top" style="top: 19%; left:57.5%;">
-                <a href="#">
+                <a href="ulke.html?id=11">
                     <div class="icon"></div>
                 </a>
             </div>
