kongo eklendi ve responsive düzetilmeye çalışıldı

--- a/map.html
+++ b/map.html
@@ -217,7 +217,7 @@
 
             <!-- Kongo -->
             <div class="item top" style="top: 54%; left:55.5%;">
-                <a href="#">
+                <a href="ulke.html?id=15">
                     <div class="icon"></div>
                 </a>
             </div>
