--- a/ulke.html
+++ b/ulke.html
@@ -70,7 +70,7 @@
             <div class="ulke-bilgi">
                 <div class="paragraf">
                     <h2 id="geziBilgi1" class="gezilecek-bilgi">  </h2>
-                    <p id="parag1"></p>
+                    <p id="parag1" class="bilgi2"></p>
                 </div>
                 <img id="img1" src="">
             </div>
@@ -78,7 +78,7 @@
             <div class="ulke-bilgi">
                 <div class="paragraf">
                     <h2 id="geziBilgi2" class="gezilecek-bilgi">  </h2>
-                    <p id="parag2"></p>
+                    <p id="parag2" class="bilgi2"></p>
                 </div>
                 <img id="img2" src="">
             </div>
@@ -91,7 +91,7 @@
                 <img id="img3" src="">
                 <div class="paragraf">
                     <h2 id="yemekBilgi1" class="yemek-bilgi">  </h2>
-                    <p id="parag3"></p>
+                    <p id="parag3" class="bilgi2"></p>
                 </div>
             </div>
 
@@ -99,7 +99,7 @@
                 <img id="img4" src="">
                 <div class="paragraf">
                     <h2 id="yemekBilgi2" class="yemek-bilgi">  </h2>
-                    <p id="parag4"></p>
+                    <p id="parag4" class="bilgi2"></p>
                 </div>
             </div>
 
@@ -107,7 +107,7 @@
                 <img id="img5" src="">
                 <div class="paragraf">
                     <h2 id="tatlıBilgi1" class="yemek-bilgi">  </h2>
-                    <p id="parag5"></p>
+                    <p id="parag5" class="bilgi2"></p>
                 </div>
             </div>
         </div>
