--- a/map.html
+++ b/map.html
@@ -98,7 +98,7 @@
 
             <!-- Meksika -->
             <div class="item top" style="top: 41.2%; left: 22.8%;">
-                <a href="#">
+                <a href="ulke.html?id=29">
                     <div class="icon"></div>
                 </a>
             </div>
@@ -119,7 +119,7 @@
 
             <!-- Peru -->
             <div class="item top" style="top: 57%; left: 30.7%;">
-                <a href="#">
+                <a href="ulke.html?id=33">
                     <div class="icon"></div>
                 </a>
             </div>
@@ -154,14 +154,14 @@
 
             <!-- Singapur -->
             <div class="item top" style="top: 51%; left: 78%;">
-                <a href="#">
+                <a href="ulke.html?id=36">
                     <div class="icon"></div>
                 </a>
             </div>
 
             <!-- Rusya -->
             <div class="item top" style="top: 22.5%; left: 76.6%;">
-                <a href="#">
+                <a href="ulke.html?id=35">
                     <div class="icon"></div>
                 </a>
             </div>
@@ -175,7 +175,7 @@
 
             <!-- Nepal -->
             <div class="item top" style="top: 36%; left: 72.8%;"  id="kaybol">
-                <a href="#">
+                <a href="ulke.html?id=31">
                     <div class="icon"></div>
                 </a>
             </div>
@@ -203,7 +203,7 @@
 
             <!-- Güney Afrika -->
             <div class="item top" style="top: 67%; left:56.5%;">
-                <a href="#">
+                <a href="ulke.html?id=40">
                     <div class="icon"></div>
                 </a>
             </div>
@@ -224,7 +224,7 @@
 
             <!-- Tanzanya -->
             <div class="item top" style="top: 57%; left:59.5%;" id="kaybol">
-                <a href="#">
+                <a href="ulke.html?id=39">
                     <div class="icon"></div>
                 </a>
             </div>
@@ -238,21 +238,21 @@
 
             <!-- Nijerya -->
             <div class="item top" style="top: 45.5%; left:51.5%;">
-                <a href="#">
+                <a href="ulke.html?id=32">
                     <div class="icon"></div>
                 </a>
             </div>
 
             <!-- Sudan -->
             <div class="item top" style="top: 44%; left:58.5%;" id="kaybol">
-                <a href="#">
+                <a href="ulke.html?id=37">
                     <div class="icon"></div>
                 </a>
             </div>
 
             <!-- Mısır -->
             <div class="item top" style="top: 38.5%; left:57.4%;">
-                <a href="#">
+                <a href="ulke.html?id=30">
                     <div class="icon"></div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
             
             <!-- Arabistan -->
             <div class="item top" style="top: 41%; left:63.2%;">
-                <a href="#">
+                <a href="ulke.html?id=38">
                     <div class="icon"></div>
                 </a>
             </div>
@@ -294,7 +294,7 @@
 
             <!-- Romanya -->
             <div class="item top" style="top: 26.6%; left:58%;" id="kaybol">
-                <a href="#">
+                <a href="ulke.html?id=34">
                     <div class="icon"></div>
                 </a>
             </div>
