--- a/about.html
+++ b/about.html
@@ -33,11 +33,11 @@
         <ul class="nav-menu">
             <li class="nav-item">
                 <i class="fa-solid fa-house"></i>
-                <a href="index.html" class="link" id="actv">Ana Sayfa</a>
+                <a href="index.html" class="link">Ana Sayfa</a>
             </li>
             <li class="nav-item">
                 <i class="fa-solid fa-address-card"></i>
-                <a href="about.html" class="link">Hakkımızda</a>
+                <a href="about.html" class="link" id="actv">Hakkımızda</a>
             </li>
             <li class="nav-item">
                 <i class="fa-solid fa-message"></i>
