--- a/index.html
+++ b/index.html
@@ -76,13 +76,12 @@
                 Bu kısım Dünya Tanıtım bölümüdür.<br>
                 Yaptığımız Map;Kıta,Okyanus,Ülkeler içermektedir.<br>
                 Extra olarak verilen bölgelerin bilgileri bulunmaktadır.<br>
-        
-
                 Etkileşim için Dünya isimli butona basınız.
             </p>
 
             <div class="btn"> 
                 <a href="map.html">WORLD</a>
+                <a href="3dEarht.html" id="3d">3D WORLD</a>
             </div>
         </div>
         <img src="img/Map.jpg" alt="Worldmap">
