--- a/map.html
+++ b/map.html
@@ -26,7 +26,7 @@
         <ul class="nav-menu">
             <li class="nav-item">
                 <i class="fa-solid fa-house"></i>
-                <a href="index.html" class="link" id="actv">Ana Sayfa</a>
+                <a href="index.html" class="link">Ana Sayfa</a>
             </li>
             <li class="nav-item">
                 <i class="fa-solid fa-address-card"></i>
