logoya location.href ekledim

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 <header>
     <nav class="navbar">
         <div class="logo">
-            <video  id="LogoVideo"autoplay muted >
+            <video  id="LogoVideo"autoplay muted onclick="location.href='index.html'">
                <source src="img/Wanderlust (1).mp4" type="video/mp4"  >
             </video>   
            </div>
