--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
             <div class="btn"> 
                 <a href="map.html">WORLD</a>
-                <a href="3dEarht.html" id="3d">3D WORLD</a>
+                <a href="3dEarth.html" id="3d">3D WORLD</a>
             </div>
         </div>
         <img src="img/Map.jpg" alt="Worldmap">
