--- a/3dEarth.html
+++ b/3dEarth.html
@@ -62,10 +62,14 @@
             <source src="img/Solar System - Google Chrome 2023-06-09 23-47-55.mp4" type="video/mp4">
         </video>
 
-    <div class="content" id="3dEarth">
+    <div class="Earth">
         
         <h1>3dEarth</h1>
-        <p style="color: white;">3d Dünyayı Çalıştırmak ve İncelemek için 3dEarth Dosyasına Gidin.</p>
+        <p>
+            3d Dünyaya ulaşmak, çalıştırmak ve incelemek için <a href="https://github.com/Misi-i/3dEarth"> Buradaki </a> linke tıklayın ve 3dearth dosyasına gidip talimatları uygulayınız.
+            <br>
+            !arka taraftaki yapılan sitenin videosudur!
+        </p>
      
     </div> 
 </div>
