--- a/3dEarth.html
+++ b/3dEarth.html
@@ -72,7 +72,24 @@
 
 
 <!--Article-->
+<!--Map İntroduction-->
+<div class="İntros">
+    <div class="intro">
+        <div class="p-button">
+            <p class="First-intro">
+                3D dünyaya gitmek için tıklayın. <br>
+                <a href="https://github.com/Misi-i/3dEarth.git">https://github.com/Misi-i/3dEarth.git</a>
+            </p>
 
+            <div class="btn"> 
+                <a href="map.html">2D WORLD</a>
+               
+            </div>
+        </div>
+       
+    </div>
+</div> 
+<!--Map İntroduction-->
 <!--Content-->
 
 <!--Footer-->
